--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <button id='Descifrar' class="botones"><h2>Descifrar Pista</h2></button>
     </div>
 
-<div id='Pantalla2' class='centrar'>
+<div id='Pantalla2' class='centrar hide'>
   <h1>Crear pista secreta</h2>
   <p>Elige cuántas posiciones quieres que se desplace tu texto. </p>
   <input id='offset' type="number" min="1" pattern="^[0-9]+" placeholder="Selecciona el número">
@@ -26,13 +26,13 @@
 </div>
 
 
-<div id='pantalla3' class='centrar'>
+<div id='Pantalla3' class='centrar hide'>
   <h1>Descifrar pista secreta</h1>
   <p>Elige cuántas posiciones quieres que se desplace tu texto. </p>
   <input id='offset2' type="number" min="1" pattern="^[0-9]+" placeholder="Selecciona el número">
   <p>Introduce tu pista secreta a descifrar.</p>
   <textarea name="comentarios" rows="5" cols="30" placeholder='Escribe aquí tu pista a descifrar'></textarea>
- <p> <button id='Descifrar2' class="botones"><h2>Descifrar Pista</h2></button> </p>
+ <p> <button id='Descifrar2' class="botones" ><h2>Descifrar Pista</h2></button> </p>
  <p>¡Listo! Aquí está tu pista secreta descifrada</p>
  <textarea name="comentarios" rows="5" cols="30" placeholder='Aquí está tu pista secreta descifrada'></textarea>
   <p> <button id='regresar2' class="botones"><h2> Regresar </h2></button> </p>
