--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
   <h1>Crear pista secreta</h2>
   <p>Elige cuántas posiciones quieres que se desplace tu texto. </p>
   <input id='offset' type="number" min="1" pattern="^[0-9]+" placeholder="Selecciona el número">
-  <p>Crea tu pista secreta. Recuerda que el texto que introduzcas debe estar en mayúsculas.</p>
+  <p>Escribe tu texto para codificarlo.</p>
   <textarea name="comentarios" rows="5" cols="30" placeholder='Escribe aquí tu pista a codificar'></textarea>
  <p> <button id='Crear2' class="botones"><h2>Crear Pista</h2></button> </p>
- <p>¡Listo! Esta es tu pista secreta</p>
+ <p>¡Listo! Esta es tu pista secreta.</p>
  <textarea name="comentarios" rows="5" cols="30" placeholder='Aquí está tu pista secreta'></textarea>
 <p> <button id='regresar' class="botones"><h2> Regresar </h2></button> </p>
 </div>
@@ -33,7 +33,7 @@
   <p>Introduce tu pista secreta a descifrar.</p>
   <textarea name="comentarios" rows="5" cols="30" placeholder='Escribe aquí tu pista a descifrar'></textarea>
  <p> <button id='Descifrar2' class="botones" ><h2>Descifrar Pista</h2></button> </p>
- <p>¡Listo! Aquí está tu pista secreta descifrada</p>
+ <p>¡Listo! Aquí está tu pista secreta descifrada.</p>
  <textarea name="comentarios" rows="5" cols="30" placeholder='Aquí está tu pista secreta descifrada'></textarea>
   <p> <button id='regresar2' class="botones"><h2> Regresar </h2></button> </p>
 
