Archivos corregidos y con las funciones correctas para codificar; la primer y segunda pantalla funcionan perfectamente. Ya pasa los test de codificar

--- a/src/index.html
+++ b/src/index.html
@@ -8,46 +8,46 @@
 </head>
 
 <body>
-  <div id="Pantalla1" class='centrar'>
+  <div id="Pantalla1" class="centrar">
     <h1>Búsqueda del tesoro</h1>
     <p>Bienvenid@, selecciona si deseas crear una pista secreta o descifrar tu pista secreta.</p>
-    <button id='Crear' class="botones">
+    <button id="Crear" class="botones">
       <h2>Crear Pista</h2>
     </button>
-    <button id='Descifrar' class="botones">
+    <button id="Descifrar" class="botones">
       <h2>Descifrar Pista</h2>
     </button>
   </div>
 
-  <div id='Pantalla2' class='centrar hide'>
-    <h1>Crear pista secreta</h2>
+  <div id="Pantalla2" class="centrar hide">
+    <h1>Crear pista secreta</h1>
       <p>Elige cuántas posiciones quieres que se desplace tu texto. </p>
-      <input id='desplazar' type="number" min="1" max='1000' placeholder="Selecciona el número">
+      <input id="desplazar" type="number" min="1" placeholder="Selecciona">
       <p>Escribe tu texto para codificarlo.</p>
-      <textarea id="textACod" rows="5" cols="30" placeholder='Escribe aquí tu pista a codificar'></textarea>
-      <p> <button id='Crear2' class="botones">
+      <textarea id="textACod" rows="5" cols="30" placeholder="Escribe aquí tu pista a codificar"></textarea>
+      <p> <button id="Crear2" class="botones">
           <h2>Crear Pista</h2>
         </button> </p>
       <p>¡Listo! Esta es tu pista secreta.</p>
-      <textarea id='textCod' rows="5" cols="30" placeholder='Aquí está tu pista secreta'></textarea>
-      <p> <button id='regresar' class="botones">
+      <textarea id="textCod" rows="5" cols="30" placeholder="Aquí está tu pista secreta"></textarea>
+      <p> <button id="regresar" class="botones">
           <h2> Regresar </h2>
         </button> </p>
   </div>
 
 
-  <div id='Pantalla3' class='centrar hide'>
+  <div id="Pantalla3" class="centrar hide">
     <h1>Descifrar pista secreta</h1>
     <p>Elige cuántas posiciones quieres que se desplace tu texto. </p>
-    <input id='desplazar2' type="number" min="1" max='1000' placeholder="Selecciona el número">
+    <input id="desplazar2" type="number" min="1" placeholder="Selecciona">
     <p>Introduce tu pista secreta a descifrar.</p>
-    <textarea id='textADecod' rows="5" cols="30" placeholder='Escribe aquí tu pista a descifrar'></textarea>
-    <p> <button id='Descifrar2' class="botones">
+    <textarea id="textADecod" rows="5" cols="30" placeholder="Escribe aquí tu pista a descifrar"></textarea>
+    <p> <button id="Descifrar2" class="botones">
         <h2>Descifrar Pista</h2>
       </button> </p>
     <p>¡Listo! Aquí está tu pista secreta descifrada.</p>
-    <textarea id='textDecod' rows="5" cols="30" placeholder='Aquí está tu pista secreta descifrada'></textarea>
-    <p> <button id='regresar2' class="botones">
+    <textarea id="textDecod" rows="5" cols="30" placeholder="Aquí está tu pista secreta descifrada"></textarea>
+    <p> <button id="regresar2" class="botones">
         <h2> Regresar </h2>
       </button> </p>
 
