Proyecto terminado! todo completo, incluyendo README y tests al 100%

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-  <section id="Pantalla1" class="centrar">
+  <section id="pantalla1" class="centrar">
     <header>
-      <h1 class="p1">Búsqueda del tesoro</h1>
+      <h1 class="p1 textShadow">Búsqueda del tesoro</h1>
     </header>
     <main id="parr" class="centrar">
-      <p>Esto es una búsqueda del tesoro. <br>
+      <p class="textShadow">Esto es una búsqueda del tesoro. <br>
         ¿Estás listo para buscar diamantes y oro?<br>
         Ahora podrás crear o descifrar pistas secretas fácilmente.</p>
-      <p>Selecciona si deseas crear una pista secreta o descifrar tu pista secreta.</p>
+      <p class="textShadow">Selecciona si deseas crear una pista secreta o descifrar tu pista secreta.</p>
     </main>
     <button id="Crear" class="botones">
       <h2>Crear</h2>
@@ -28,7 +28,7 @@
     </button>
   </section>
 
-  <section id="Pantalla2" class="centrar hide">
+  <section id="pantalla2" class="centrar hide">
     <header>
       <h1>Crear pista secreta</h1>
     </header>
@@ -53,7 +53,7 @@
   </section>
 
 
-  <section id="Pantalla3" class="centrar hide">
+  <section id="pantalla3" class="centrar hide">
     <header>
       <h1>Descifrar pista secreta</h1>
     </header>
